<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/progress_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_quiz"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:progressDrawable="@drawable/progress_bar_light" />

                <TextView
                    android:id="@+id/tv_quiz_progress"
                    style="@style/SmallTextDark"
                    fontPath="fonts/montserrat.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <ScrollView
                android:id="@+id/quiz_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/quiz_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/question_text"
                            style="@style/NormalTextDark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="left"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/question_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/question_image_image"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:layout_margin="4dp" />

                        <TextView
                            android:id="@+id/question_image_caption"
                            style="@style/SmallTextDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/quiz_response_widget"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                style="?android:buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/quiz_navigation_bar"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mquiz_prev_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight=".5"
                    android:drawableStart="@drawable/ic_arrow_left"
                    app:drawableTint="@color/quiz_navigation_button"
                    android:text="@string/widget_quiz_prev"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/mquiz_next_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight=".5"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    app:drawableTint="@color/quiz_navigation_button"
                    android:text="@string/widget_quiz_next"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/initial_info_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>