...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="70% pass threshold" />

            <Button
                android:id="@+id/take_quiz_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/list_card_vertical_padding"
                android:paddingStart="@dimen/padding_large"
                android:paddingEnd="@dimen/padding_large"
...
