...
    <string name="activitylog_toexport">to export</string>
    <string name="activitylog_btn_submit">Submit to server</string>
    <string name="activitylog_btn_export">Export activity</string>
    <string name="videoplayer_play_again">Play again</string>
    <string name="videoplayer_continue">Continue to course</string>
    <string name="options">Options</string>
    <string name="quiz_loading_error">Unexpected error loading quiz. Maybe the format was wrong or out-dated?</string>
    <string name="error_register_username_length">Username must have at least %d characters</string>
    <string name="change_setting_apikey_warning">This will invalidate the API keys for every user cached in the device, so they will need an active internet connection to login again.</string>
    <string name="change_setting_logout_warning">You are currently logged in. If you change this setting your session will finish. Do you confirm?</string>
    <string name="accept">Accept</string>
    <string name="user_not_logged_in">User not logged in</string>

...
