...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginEnd="4sp"
            android:layout_marginBottom="@dimen/padding_medium"
            android:text="2/2"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
